# cmake-template

./: CMakeLists.txt  README.md
cmake/: libtest-config-version.cmake  libtest-config.cmake
include/: libtest.hpp
src/: libtest.cpp
